--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "tsc --project server/tsconfig.server.json && Set NODE_ENV=Development&&nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.12",
+    "@types/nodemon": "^1.19.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   }
 }
