--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "cra-expressjs-docker",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -23,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "tsc --project server/tsconfig.server.json && Set NODE_ENV=Development&&nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
