--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
@@ -18,12 +17,14 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "tsc --project server/tsconfig.server.json && Set NODE_ENV=Development&&nodemon server",
+    "server": "nodemon --config nodemon.json ts-node server/app/index.ts ",
+    "server:tsc": "tsc --project server/tsconfig.server.json && Set NODE_ENV=Development&&nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,7 +49,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
-    "@types/nodemon": "^1.19.0",
+    "@types/node": "^12.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
   }
