--- a/server/tsconfig.server.json
+++ b/server/tsconfig.server.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": ".",
-    "module": "commonjs",
+    "module": "ES6",
     "target": "esnext",
     "lib": ["es6"],
     "allowJs": true,
