--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "server:dev": "nodemon --exec ts-node --project server/tsconfig.server.json server/src/index.ts",
+    "server:build": "tsc --project server/tsconfig.server.json",
+    "server:run-build": "node server/build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
