--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "server:build": "tsc --project server/tsconfig.server.json",
     "server:run-build": "node server/build",
     "start": "react-scripts start",
+    "both": "run-p server:dev start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,6 +53,7 @@
     "@types/express": "^4.17.12",
     "@types/node": "^12.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5"
   }
 }
