--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cra-expressjs-docker",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3009",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,14 +17,12 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.1.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "server:dev": "nodemon --exec ts-node --project server/tsconfig.server.json server/src/index.ts",
-    "server:build": "tsc --project server/tsconfig.server.json",
-    "server:run-build": "node server/build",
     "start": "react-scripts start",
     "both": "run-p server:dev start",
     "build": "react-scripts build",
