--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/client": "^3.3.16",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,19 +18,23 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "ts-node": "^10.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "server:dev": "nodemon --exec ts-node --project server/tsconfig.server.json server/src/index.ts",
-    "server:build": "tsc --project server/tsconfig.server.json",
-    "server:run-build": "node server/build",
     "start": "react-scripts start",
-    "both": "run-p server:dev start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "codegen": "gql-gen"
+  },
+  "devDependencies": {
+    "@graphql-codegen/add": "^2.0.1",
+    "@graphql-codegen/cli": "^1.17.10",
+    "@graphql-codegen/typescript": "^1.17.10",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.7",
+    "@graphql-codegen/typescript-resolvers": "^1.17.10"
   },
   "eslintConfig": {
     "extends": [
@@ -48,12 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.12",
-    "@types/node": "^12.0.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7",
-    "npm-run-all": "^4.1.5"
   }
 }
