--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "jsx": "react",
+    "target": "es6",
     "module": "commonjs",
+    "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "./",
+    "rootDirs": ["./", "../src/graphql"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": [".", "../src/graphql"]
 }
