--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
 version: "3.4"
 services:
   client:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: craexpressjsdocker:latest
     ports:
       - "3001:3001"
     environment:
-      TOOLBAR_COLOR: "green"
+      TOOLBAR_COLOR: "purple"
