--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,11 @@
   },
   "scripts": {
     "server:dev": "nodemon --exec ts-node --project tsconfig.json src/index.ts",
-    "server:build": "tsc --project tsconfig.json",
-    "server:run-build": "node ../build/bff/server"
+    "server:build": "tsc --project tsconfig.json"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^12.0.0",
-    "nodemon": "^2.0.7",
-    "npm-run-all": "^4.1.5"
+    "nodemon": "^2.0.7"
   }
 }
